# template_data_science

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  README.md  cookiecutter.json  precommit.md  pyproject.toml  requirements.txt
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda_env.yml  docker-compose-dev.yml  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: codecheck.yml
{{cookiecutter.repo_name}}/.github/workflows/on-hold/: precommit-check.yml  python-package-check.yml
{{cookiecutter.repo_name}}/application/: README.md
{{cookiecutter.repo_name}}/application/dashwebapp/: app.py
{{cookiecutter.repo_name}}/application/fastapiwebapp/: app.py  fastapiwebapp.py
{{cookiecutter.repo_name}}/application/flaskwebapp/: app.py  flaskwebapp.py
{{cookiecutter.repo_name}}/data/raw/: .gitignore
{{cookiecutter.repo_name}}/data/temp/: .gitignore
{{cookiecutter.repo_name}}/docs/writeup/: conf.py  index.rst
{{cookiecutter.repo_name}}/notebooks/eda/: example.ipynb
{{cookiecutter.repo_name}}/notebooks/modelling/: example.ipynb
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: features.py  timing_utils.py
{{cookiecutter.repo_name}}/tests/: README.md  test_random_tests.py
{{cookiecutter.repo_name}}/tests/{{cookiecutter.package_name}}/: test_examplemodule.py  test_timing_utils.py
{{cookiecutter.repo_name}}/workflows/: precommit-check.yml
{{cookiecutter.repo_name}}/workflows/on-hold/: precommit-check.yml
(+8 files in other folders)
