[tool.poetry]
name = "{{cookiecutter.project_name.lower().replace(' ', '_')}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
pytest = "^6.2.5"
python-dotenv = "^0.19.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
flake8 = "^3.9.2"
# m2r = "^0.2.1"
# Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
